--- a/README
+++ b/README
@@ -2,3 +2,4 @@ Voice - call in, be asked 2 questions, get results read to you -- get a specific
 SMS/IM - be asked 2 questions, get ~5 results texted to you, with links for more info.
 Twitter - @123volunteer with a zip code and get a link to a page of all relevant events (will link to API provider's UI)
 
+TO DO - add multi-modal'ness to share details with a friend...
